--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
+    <title>Eathub - Meals at your Doorstep</title>
     <meta name="description" content="Food Deliver Service">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./styles.css">
@@ -14,10 +14,36 @@
     <!-- Hero -->
     <section class="hero">
         <div class="hero-inline">
-            <Header>
+            <Header id="top">
                 <section class="nav">
                     <section class="icon">
                         <img src="./img/logo.png" alt="eathub-logo">
+                    </section>
+                    <section class="nav-link">
+                        <button>
+                            <a href="">
+                                Build Kitchen
+                            </a>
+                        </button>
+                        <div class="dropdwn-wrapper">
+                            <button class="dropdwn">
+                                <a href="">
+                                    Download
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 48 48">
+                                        <g fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="4">
+                                            <path
+                                                d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4S4 12.954 4 24s8.954 20 20 20Z" />
+                                            <path stroke-linecap="round" d="m33 21l-9 9l-9-9" />
+                                        </g>
+                                    </svg>
+                                </a>
+                            </button>
+                            <div class="dropdown">
+                                <button class="dropdown-button">Google Playstore</button>
+                                <button class="dropdown-button">IOS Store</button>
+                            </div>
+                        </div>
+
                     </section>
                 </section>
             </Header>
@@ -262,6 +288,9 @@
             </div>
         </div>
     </div>
+
+    <!-- javascript -->
+    <script src="./script.js"></script>
 </body>
 
 </html>
