responsiveness-initial-build.

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -17,7 +17,7 @@
             <Header id="top">
                 <section class="nav">
                     <section class="icon">
-                        <img src="./img/logo.png" alt="eathub-logo">
+                        <img src="./img/logo-1.png" alt="eathub-logo">
                     </section>
                     <section class="nav-link">
                         <button>
@@ -122,7 +122,7 @@
             </div>
             <div class="shopHero-aside">
                 <div class="shopHero-header">
-                    <p>Purchase Meals from different Shops</p>
+                    <p>Purchase meals from different shops</p>
                 </div>
                 <div class="shopHero-body">
                     <p>
