minor-ui-changes and button-add

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -52,6 +52,33 @@
                 <h1>With Delicious Meal.</h1>
                 <h3>Delicious Meals Delivered to your door once you place an order from anywhere in Lagos with an hour
                     delivery time</h3>
+                <div class="hero-button">
+                    <div class="hero-button-inner">
+                        <button>
+                            <a href="">
+                                Build Kitchen
+                            </a>
+                        </button>
+                        <div class="dropdwn-wrapper">
+                            <button class="dropdwn">
+                                <a href="">
+                                    Download
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 48 48">
+                                        <g fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="4">
+                                            <path
+                                                d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4S4 12.954 4 24s8.954 20 20 20Z" />
+                                            <path stroke-linecap="round" d="m33 21l-9 9l-9-9" />
+                                        </g>
+                                    </svg>
+                                </a>
+                            </button>
+                            <div class="dropdown">
+                                <button class="dropdown-button">Google Playstore</button>
+                                <button class="dropdown-button">IOS Store</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- Navbar -->
@@ -67,7 +94,7 @@
                 </div>
                 <div class="infoHero-box-text">
                     <div class="infoHero-box-header">
-                        <h1>Easy Order</h1>
+                        <h2>Easy Order</h2>
                     </div>
                     <div class="infoHero-box-body">
                         <p>
@@ -84,7 +111,7 @@
                 </div>
                 <div class="infoHero-box-text">
                     <div class="infoHero-box-header">
-                        <h1>Quick Delivery</h1>
+                        <h2>Quick Delivery</h2>
                     </div>
                     <div class="infoHero-box-body">
                         <p>
@@ -101,7 +128,7 @@
                 </div>
                 <div class="infoHero-box-text">
                     <div class="infoHero-box-header">
-                        <h1>Online Kitchen</h1>
+                        <h2>Online Kitchen</h2>
                     </div>
                     <div class="infoHero-box-body">
                         <p>
@@ -204,7 +231,7 @@
         <div class="downloadHero-container">
             <div class="downloadHero-body">
                 <div class="downloadHero-Header">
-                    <h1>Download<br /> Eat<span class='special'>Hub</span> Mobile App</h1>
+                    <h2>Download<br /> Eat<span class='special'>Hub</span> Mobile App</h2>
                 </div>
                 <div class="downloadHero-btn">
                     <img loading='lazy' src="./img/Google.png" alt="google" />
