--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -88,7 +88,7 @@
     <section class="infoHero">
         <!-- InfoHero -->
         <div class="infoHero-wrapper">
-            <div class="infoHero-box">
+            <div class="infoHero-box animation">
                 <div class="infoHero-icon">
                     <img loading="lazy" src="./img/info1.png" alt="information1" />
                 </div>
@@ -105,7 +105,7 @@
                 </div>
             </div>
 
-            <div class="infoHero-box">
+            <div class="infoHero-box animation">
                 <div class="infoHero-icon">
                     <img loading="lazy" src="./img/info2.png" alt="information2" />
                 </div>
@@ -122,7 +122,7 @@
                 </div>
             </div>
 
-            <div class="infoHero-box">
+            <div class="infoHero-box animation">
                 <div class="infoHero-icon">
                     <img loading="lazy" src="./img/info3.png" alt="information3" />
                 </div>
@@ -144,10 +144,10 @@
     <!-- ShopHero -->
     <section class="shopHero">
         <div class="shopHero-container">
-            <div class="shopHero-img">
+            <div class="shopHero-img animation">
                 <img loading="lazy" src="./img/shopHero-img.png" alt="shopHero" />
             </div>
-            <div class="shopHero-aside">
+            <div class="shopHero-aside animation">
                 <div class="shopHero-header">
                     <p>Purchase meals from different shops</p>
                 </div>
@@ -158,7 +158,7 @@
                         not just aesthetically pleasing but various delicious meals.
                     </p>
                 </div>
-                <div class="shopHero-btn">
+                <div class="shopHero-btn animation">
                     <!-- This has to trigger a pop-up -->
                     <button>
                         <span class="text">Download App</span>
@@ -170,10 +170,10 @@
     <!-- ShowHero -->
     <section class="showHero">
         <div class="showHero-container">
-            <div class="showHero-img">
+            <div class="showHero-img animation">
                 <img loading='lazy' src="./img/phone.png" alt="phone" />
             </div>
-            <div class="showHero-aside">
+            <div class="showHero-aside animation">
                 <div class="showHero-head">
                     <h3>Own your Food Space with Us</h3>
                 </div>
@@ -190,7 +190,7 @@
                         them.
                     </p>
                 </div>
-                <div class="showHero-btn">
+                <div class="showHero-btn animation">
                     <button>
                         <a href="vendor.eathub.live/">
                             <span class="text">Set Up Kitchen</span>
@@ -203,10 +203,10 @@
     <!-- DeliveryHero -->
     <section class="deliveryHero">
         <div class="deliveryHero-container">
-            <div class="deliveryHero-img">
+            <div class="deliveryHero-img animation">
                 <img loading="lazy" src="img/deliveryBike.png" alt="delivery-bike" />
             </div>
-            <div class="deliveryHero-aside">
+            <div class="deliveryHero-aside animation">
                 <div class="deliveryHero-head">
                     <h3>Food Delivery</h3>
                 </div>
@@ -219,7 +219,7 @@
                         restaurant. It’s about forming a connection.
                     </p>
                 </div>
-                <div class="deliveryHero-btn">
+                <div class="deliveryHero-btn animation">
                     <button><span class="text">Join Logistics Team</span></button>
                 </div>
             </div>
@@ -242,7 +242,7 @@
                 </div>
             </div>
             <div class="downloadHero-img">
-                <img loading='lazy' src="img/phoneUI.png" alt="phone" />
+                <img loading='lazy' src="img/phoneUI.png" alt="phone" class="slide-in" />
             </div>
         </div>
     </section>
@@ -272,7 +272,7 @@
                         <span style="color: #FF8323">Hub</span>
                     </h1>
                     <h5>Coming Soon to these platforms:</h5>
-                    <div className="link-btn">
+                    <div class="link-btn">
                         <img src="./img/Google.png" alt="google" />
                         <img src="img/Apple.png" alt="apple" />
                     </div>
