--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -48,10 +48,24 @@
                 </section>
             </Header>
             <div class="hero-title">
-                <h1>Discover Restaurants</h1>
-                <h1>With Delicious Meal.</h1>
-                <h3>Delicious Meals Delivered to your door once you place an order from anywhere in Lagos with an hour
-                    delivery time</h3>
+                <h1>
+                    <div class="hero-content">
+                        <h1 class="line-inner">
+                            Discover Restaurants
+                        </h1>
+                    </div>
+                    <div class="hero-content">
+                        <h1 class="line-inner">
+                            With Delicious Meal.
+                        </h1>
+                    </div>
+                </h1>
+                <div class="hero-content">
+                    <h3 class="line-inner">Delicious Meals Delivered to your door once you place an order from anywhere
+                        in Lagos with an
+                        hour
+                        delivery time</h3>
+                </div>
                 <div class="hero-button">
                     <div class="hero-button-inner">
                         <button>
