--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -19,7 +19,7 @@
                         <img src="./img/logo-1.png" alt="eathub-logo">
                     </div>
                     <div class="nav-link">
-                </div>
+                    </div>
                     <div class="nav-btn">
                         <button>
                             <a href="">
@@ -41,8 +41,12 @@
                             </a>
                         </button>
                         <div class="dropdown">
-                            <button class="dropdown-button"><a href="/"><p>Google</p></a></button>
-                            <button class="dropdown-button"><a href="/"><p>IOS</p></a></button>
+                            <button class="dropdown-button"><a href="/">
+                                    <p>Google</p>
+                                </a></button>
+                            <button class="dropdown-button"><a href="/">
+                                    <p>IOS</p>
+                                </a></button>
                         </div>
                     </div>
 
@@ -193,9 +197,11 @@
                     </div>
                     <div class="shopHero-body">
                         <p>
-                            Eathub automatically provides the nearest available food
-                            Restaurant and cooking services of your choice. Feed your eyes on
-                            not just aesthetically pleasing but various delicious meals.
+                            Eathub seamlessly links you to local food retailers, simplifying access to your favorite
+                            meals, be they delicious
+                            culinary delights or wholesome, nourishing choices. With a warm and welcoming approach, we
+                            make sure you're
+                            well-connected to an array of dining options that suit your taste and lifestyle.
                         </p>
                     </div>
                     <div class="shopHero-btn animation">
@@ -224,10 +230,15 @@
                     </div>
                     <div class="showHero-body">
                         <p>
-                            Ever thought of how to get customers to purchase the meals you
-                            cook? Proper Registration now, and get the chance to market your
-                            cooking skills and meals to the right audience who can purchase
-                            them.
+                            At EATHUB, we offer a dynamic platform for you to effectively showcase your culinary
+                            business to a wide-ranging
+                            audience, all eager to savor your delectable offerings. By becoming a vendor on our app, you
+                            gain the power to
+                            effortlessly promote your culinary creations, reaching out to a diverse community of
+                            customers who are enthusiastic
+                            about indulging in your delightful dishes. It's a seamless opportunity to connect with a
+                            multitude of food lovers and
+                            expand your reach in the culinary world.
                         </p>
                     </div>
                     <div class="showHero-btn animation">
