--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -18,35 +18,35 @@
                     <div class="icon">
                         <img src="./img/logo-1.png" alt="eathub-logo">
                     </div>
-                    <div class="nav-link">
-                    </div>
-                    <div class="nav-btn">
-                        <button>
-                            <a href="">
-                                <p>Vendor</p>
-                            </a>
-                        </button>
-                    </div>
-                    <div class="dropdwn-wrapper">
-                        <button class="dropdwn">
-                            <a href="">
-                                <p>Download</p>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 48 48">
-                                    <g fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="4">
-                                        <path
-                                            d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4S4 12.954 4 24s8.954 20 20 20Z" />
-                                        <path stroke-linecap="round" d="m33 21l-9 9l-9-9" />
-                                    </g>
-                                </svg>
-                            </a>
-                        </button>
-                        <div class="dropdown">
-                            <button class="dropdown-button"><a href="/">
-                                    <p>Google</p>
-                                </a></button>
-                            <button class="dropdown-button"><a href="/">
-                                    <p>IOS</p>
-                                </a></button>
+                    <div class="nav-cta">
+                        <div class="nav-btn">
+                            <button>
+                                <a href="">
+                                    <p>Vendor</p>
+                                </a>
+                            </button>
+                        </div>
+                        <div class="dropdwn-wrapper">
+                            <button class="dropdwn">
+                                <a href="">
+                                    <p>Download</p>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 48 48">
+                                        <g fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="4">
+                                            <path
+                                                d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4S4 12.954 4 24s8.954 20 20 20Z" />
+                                            <path stroke-linecap="round" d="m33 21l-9 9l-9-9" />
+                                        </g>
+                                    </svg>
+                                </a>
+                            </button>
+                            <div class="dropdown">
+                                <button class="dropdown-button"><a href="/">
+                                        <p>Google</p>
+                                    </a></button>
+                                <button class="dropdown-button"><a href="/">
+                                        <p>IOS</p>
+                                    </a></button>
+                            </div>
                         </div>
                     </div>
 
