--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -114,7 +114,7 @@
             <div class="infoHero-wrapper">
                 <div class="infoHero-box animation">
                     <div class="infoHero-icon">
-                        <img loading="lazy" src="./img/info1.png" alt="information1" />
+                        <img loading="lazy" src="https://ik.imagekit.io/0y99xuz0yp/img/info1.png?updatedAt=1702610156179" alt="information1" />
                     </div>
                     <div class="infoHero-box-text">
                         <div class="infoHero-box-header">
@@ -131,7 +131,7 @@
 
                 <div class="infoHero-box animation">
                     <div class="infoHero-icon">
-                        <img loading="lazy" src="./img/info2.png" alt="information2" />
+                        <img loading="lazy" src="https://ik.imagekit.io/0y99xuz0yp/img/info2.png?updatedAt=1702610151034" alt="information2" />
                     </div>
                     <div class="infoHero-box-text">
                         <div class="infoHero-box-header">
@@ -148,7 +148,7 @@
 
                 <div class="infoHero-box animation">
                     <div class="infoHero-icon">
-                        <img loading="lazy" src="./img/info3.png" alt="information3" />
+                        <img loading="lazy" src="https://ik.imagekit.io/0y99xuz0yp/img/info3.png?updatedAt=1702610150869" alt="information3" />
                     </div>
                     <div class="infoHero-box-text">
                         <div class="infoHero-box-header">
@@ -173,15 +173,15 @@
                         <h2>Download<br /> Eat<span class='special'>Hub</span> Mobile App</h2>
                     </div>
                     <div class="downloadHero-btn">
-                        <img loading='lazy' src="./img/Google.png" alt="google" />
-                        <img loading='lazy' src="img/Apple.png" alt="apple" />
+                        <img loading='lazy' src="https://ik.imagekit.io/0y99xuz0yp/img/Google.png?updatedAt=1702610156093" alt="google" />
+                        <img loading='lazy' src="https://ik.imagekit.io/0y99xuz0yp/img/Apple.png?updatedAt=1702610150773" alt="apple" />
                     </div>
                     <div class="downloadHero-text">
                         <p>...or click here to download directly</p>
                     </div>
                 </div>
                 <div class="downloadHero-img">
-                    <img loading='lazy' src="img/phoneUI.png" alt="phone" class="slide-in" />
+                    <img loading='eager' src="https://ik.imagekit.io/0y99xuz0yp/img/phoneUI.png?updatedAt=1702610152207" alt="phone" class="slide-in" />
                 </div>
             </div>
         </section>
@@ -189,7 +189,7 @@
         <section class="shopHero">
             <div class="shopHero-container">
                 <div class="shopHero-img animation">
-                    <img loading="lazy" src="./img/shopHero-img.png" alt="shopHero" />
+                    <img loading="lazy" src="https://ik.imagekit.io/0y99xuz0yp/img/shopHero-img.png?updatedAt=1702610153293" alt="shopHero" />
                 </div>
                 <div class="shopHero-aside animation">
                     <div class="shopHero-header">
@@ -217,7 +217,7 @@
         <section class="showHero">
             <div class="showHero-container">
                 <div class="showHero-img animation">
-                    <img loading='lazy' src="./img/phone.png" alt="phone" />
+                    <img loading='lazy' src="https://ik.imagekit.io/0y99xuz0yp/img/phone.png?updatedAt=1702610154446" alt="phone" />
                 </div>
                 <div class="showHero-aside animation">
                     <div class="showHero-head">
