--- a/landing-page/src/index.html
+++ b/landing-page/src/index.html
@@ -8,21 +8,21 @@
   <meta name="description" content="Food Deliver Service" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.cdnfonts.com/css/montserrat" rel="stylesheet">
-  <link rel="stylesheet" href="./styles.css" />
+  <link href="/styles/output.css" rel="stylesheet"/>
 </head>
 
 <body>
   <main>
     <section id="top">
       <section id="nav">
-        <div class="nav-inner">
-          <div class="icon">
+        <div class="w-[95%] h-full my-0 mx-auto flex flex-row items-center justify-between">
+          <div class="max-inline w-[15vw] h-[15vh] object-contain ml-[.5vw]">
             <img src="./img/logo-1.png" alt="eathub-logo" />
           </div>
-          <div class="nav-cta">
+          <div class="inline-size flex flex-row items-baseline gap-[5%]">
             <div class="nav-btn">
               <button>
-                <a href="">
+                <a href="/">
                   <p>Vendor</p>
                 </a>
               </button>
@@ -72,36 +72,12 @@
               from anywhere in Lagos with an hour delivery time
             </h3>
           </div>
-          <div class="hero-button">
-            <div class="hero-button-inner">
-              <button>
-                <a href=""> Build Kitchen </a>
-              </button>
-              <div class="dropdwn-wrapper">
-                <button class="dropdwn">
-                  <a href="">
-                    Download
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 48 48">
-                      <g fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="4">
-                        <path d="M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4S4 12.954 4 24s8.954 20 20 20Z" />
-                        <path stroke-linecap="round" d="m33 21l-9 9l-9-9" />
-                      </g>
-                    </svg>
-                  </a>
-                </button>
-                <div class="dropdown">
-                  <button class="dropdown-button">Google Playstore</button>
-                  <button class="dropdown-button">IOS Store</button>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
       <!-- Navbar -->
     </section>
 
-    <section class="infoHero">
+    <section class=" w-full">
       <!-- InfoHero -->
       <div class="infoHero-wrapper">
         <div class="infoHero-box animation">
